--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,8 @@ body {
 }
 ul {
     list-style-type: none;
+    list-style:none;
+	list-style-position:inside;
     margin: 0;
     padding: 0;
     background-color: #DAB88B;
@@ -11,4 +13,10 @@ ul {
   
 li {
     display: inline;
+    border-right: 1px solid #bbb;
+    border-right: none;
+    
 }
+a {
+    color: #243D25 ;    
+} 
